feat(package.json): 修改项目名称和作者

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "backstage",
+  "name": "beetle-backstage",
   "version": "0.1.0",
+  "description": "甲壳虫校园二手平台后台管理",
+  "author": "叶宏威",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
